--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
  <title>Baces_Tools</title>
-		<link rel="stylesheet" href="styles2.css" />
+		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
-		<script type="module" src="app3.js"></script>
+		<script type="module" src="main.js"></script>
 	</body>
 	<footer></footer>
 </html>
