menu style changes

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
- <title>Baces Tools</title>
+ <title>BACES Tools</title>
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
