--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html>
-	<head>
- 		<title>BACES Tools</title>
-		<link rel="stylesheet" href="styles.css" />
-		<link rel="icon" type="image/png" href="favicon-48x48.png" sizes="48x48" />
-		<link rel="shortcut icon" href="favicon.ico" />
-		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-		<link rel="manifest" href="site.webmanifest" />
-	</head>
-	<body>
-		<script type="module" src="main.js"></script>
-	</body>
-	<footer></footer>
+
+<head>
+	<title>BACES Tools</title>
+	<link rel="stylesheet" href="styles.css" />
+	<link rel="icon" type="image/png" href="favicon-48x48.png" sizes="48x48" />
+	<link rel="shortcut icon" href="favicon.ico" />
+	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+	<link rel="manifest" href="site.webmanifest" />
+
+	<!-- Open Graph meta tags -->
+	<meta property="og:title" content="BACES Tools - Deckbuilding tools for Battle Aces!" />
+	<meta property="og:description"
+		content="BACES Tools provides a unique user interface to craft Battle Aces unit decks." />
+	<meta property="og:url" content="https://baces.tools" />
+	<meta property="og:image" content="https://baces.tools/images/baces_tools.png" />
+	<meta property="og:type" content="website" />
+	<meta property="og:site_name" content="BACES Tools" />
+
+	<!-- Twitter meta tags for sharing -->
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:title" content="BACES Tools - Deckbuilding tools for Battle Aces!" />
+	<meta name="twitter:description"
+		content="BACES Tools provides a unique user interface to craft Battle Aces unit decks." />
+	<meta name="twitter:image" content="https://baces.tools/images/baces_tools.png" />
+</head>
+
+<body>
+	<script type="module" src="main.js"></script>
+</body>
+<footer></footer>
+
 </html>
