should I really bother with a branch?

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:description"
 		content="BACES Tools provides a unique user interface to craft Battle Aces unit decks." />
 	<meta property="og:url" content="https://baces.tools" />
-	<meta property="og:image" content="https://baces.tools/images/baces_tools.png" />
+	<meta property="og:image" content="https://baces.tools/images/screenshot.jpg" />
 	<meta property="og:type" content="website" />
 	<meta property="og:site_name" content="BACES Tools" />
 
@@ -23,7 +23,7 @@
 	<meta name="twitter:title" content="BACES Tools - Deckbuilding tools for Battle Aces!" />
 	<meta name="twitter:description"
 		content="BACES Tools provides a unique user interface to craft Battle Aces unit decks." />
-	<meta name="twitter:image" content="https://baces.tools/images/baces_tools.png" />
+	<meta name="twitter:image" content="https://baces.tools/images/screenshot.jpg" />
 </head>
 
 <body>
